_generated-doc/2.2/config/quarkus-smallrye-openapi-small-rye-open-api-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-smallrye-openapi-small-rye-open-api-config_configuration]]link:#quarkus-smallrye-openapi-small-rye-open-api-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.path]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.path[quarkus.smallrye-openapi.path]`

[.description]
--
The path at which to register the OpenAPI Servlet.
--|string 
|`openapi`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.store-schema-directory]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.store-schema-directory[quarkus.smallrye-openapi.store-schema-directory]`

[.description]
--
If set, the generated OpenAPI schema documents will be stored here on build. Both openapi.json and openapi.yaml will be stored here if this is set.
--|path 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.always-run-filter]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.always-run-filter[quarkus.smallrye-openapi.always-run-filter]`

[.description]
--
Do not run the filter only at startup, but every time the document is requested (dynamic).
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.ignore-static-document]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.ignore-static-document[quarkus.smallrye-openapi.ignore-static-document]`

[.description]
--
Do not include the provided static openapi document (eg. META-INF/openapi.yaml)
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.additional-docs-directory]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.additional-docs-directory[quarkus.smallrye-openapi.additional-docs-directory]`

[.description]
--
A list of local directories that should be scanned for yaml and/or json files to be included in the static model. Example: `META-INF/openapi/`
--|list of path 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.security-scheme]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.security-scheme[quarkus.smallrye-openapi.security-scheme]`

[.description]
--

--|`basic`, `jwt`, `oidc`, `oauth2-implicit` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.security-scheme-name]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.security-scheme-name[quarkus.smallrye-openapi.security-scheme-name]`

[.description]
--
Add a Security Scheme name to the generated OpenAPI document
--|string 
|`SecurityScheme`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.security-scheme-description]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.security-scheme-description[quarkus.smallrye-openapi.security-scheme-description]`

[.description]
--
Add a description to the Security Scheme
--|string 
|`Authentication`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.auto-add-security-requirement]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.auto-add-security-requirement[quarkus.smallrye-openapi.auto-add-security-requirement]`

[.description]
--
This will automatically add the security requirement to all methods/classes that has a `RolesAllowed` annotation.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.basic-security-scheme-value]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.basic-security-scheme-value[quarkus.smallrye-openapi.basic-security-scheme-value]`

[.description]
--
Add a scheme value to the Basic HTTP Security Scheme
--|string 
|`basic`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.jwt-security-scheme-value]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.jwt-security-scheme-value[quarkus.smallrye-openapi.jwt-security-scheme-value]`

[.description]
--
Add a scheme value to the JWT Security Scheme
--|string 
|`bearer`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.jwt-bearer-format]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.jwt-bearer-format[quarkus.smallrye-openapi.jwt-bearer-format]`

[.description]
--
Add a scheme value to the JWT Security Scheme
--|string 
|`JWT`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.oidc-open-id-connect-url]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.oidc-open-id-connect-url[quarkus.smallrye-openapi.oidc-open-id-connect-url]`

[.description]
--
Add a openIdConnectUrl value to the OIDC Security Scheme
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.oauth2-implicit-refresh-url]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.oauth2-implicit-refresh-url[quarkus.smallrye-openapi.oauth2-implicit-refresh-url]`

[.description]
--
Add a implicit flow refreshUrl value to the OAuth2 Security Scheme
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.oauth2-implicit-authorization-url]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.oauth2-implicit-authorization-url[quarkus.smallrye-openapi.oauth2-implicit-authorization-url]`

[.description]
--
Add an implicit flow authorizationUrl value to the OAuth2 Security Scheme
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.oauth2-implicit-token-url]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.oauth2-implicit-token-url[quarkus.smallrye-openapi.oauth2-implicit-token-url]`

[.description]
--
Add an implicit flow tokenUrl value to the OAuth2 Security Scheme
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.open-api-version]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.open-api-version[quarkus.smallrye-openapi.open-api-version]`

[.description]
--
Override the openapi version in the Schema document
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.info-title]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.info-title[quarkus.smallrye-openapi.info-title]`

[.description]
--
Set the title in Info tag in the Schema document
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.info-version]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.info-version[quarkus.smallrye-openapi.info-version]`

[.description]
--
Set the version in Info tag in the Schema document
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.info-description]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.info-description[quarkus.smallrye-openapi.info-description]`

[.description]
--
Set the description in Info tag in the Schema document
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.info-terms-of-service]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.info-terms-of-service[quarkus.smallrye-openapi.info-terms-of-service]`

[.description]
--
Set the terms of the service in Info tag in the Schema document
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.info-contact-email]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.info-contact-email[quarkus.smallrye-openapi.info-contact-email]`

[.description]
--
Set the contact email in Info tag in the Schema document
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.info-contact-name]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.info-contact-name[quarkus.smallrye-openapi.info-contact-name]`

[.description]
--
Set the contact name in Info tag in the Schema document
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.info-contact-url]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.info-contact-url[quarkus.smallrye-openapi.info-contact-url]`

[.description]
--
Set the contact url in Info tag in the Schema document
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.info-license-name]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.info-license-name[quarkus.smallrye-openapi.info-license-name]`

[.description]
--
Set the license name in Info tag in the Schema document
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.info-license-url]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.info-license-url[quarkus.smallrye-openapi.info-license-url]`

[.description]
--
Set the license url in Info tag in the Schema document
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.operation-id-strategy]]`link:#quarkus-smallrye-openapi-small-rye-open-api-config_quarkus.smallrye-openapi.operation-id-strategy[quarkus.smallrye-openapi.operation-id-strategy]`

[.description]
--
Set the strategy to automatically create an operation Id
--|`method`, `class-method`, `package-class-method` 
|

|===